# atomicDEX-API

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.aarch64-linux-android  Dockerfile.armv7-linux-androideabi  Dockerfile.dev-release  Dockerfile.i686-linux-android  Dockerfile.parity.dev  Dockerfile.release  Dockerfile.ubuntu.ci  Dockerfile.x86_64-linux-android  Dockerhub  README.md  android-ndk.sh  azure-pipelines-android-job.yml  azure-pipelines-build-stage-job.yml  azure-pipelines-ios-job.yml  azure-pipelines-lint-stage-job.yml  azure-pipelines-release-stage-job.yml  azure-pipelines-wasm-stage-job.yml  azure-pipelines.yml  deny.toml  parity.dev.chain.json  rust-toolchain.toml
.cargo/: config
mm2src/adex_cli/: Cargo.toml
mm2src/adex_cli/src/: adex_app.rs  adex_config.rs  cli.rs  helpers.rs  log.rs  logging.rs  main.rs  rpc_data.rs  transport.rs
mm2src/coins/: Cargo.toml  coin_balance.rs  coin_errors.rs  eth.rs  hd_confirm_address.rs  hd_pubkey.rs  hd_wallet.rs  history_tx_details.rs  init_withdraw.rs  lightning.rs  lp_coins.rs  lp_price.rs  my_tx_history_v2.rs  nft.rs  privkey.rs  qrc20.rs  solana.rs  sql_tx_history_storage.rs  test_coin.rs  tezos.rs  utxo.rs  watcher_common.rs  z_coin.rs
mm2src/coins/eth/: eth_balance_events.rs  eth_rpc.rs  eth_tests.rs  eth_wasm_tests.rs  nonce.rs  swap_contract_abi.json  v2_activation.rs  web3_transport.rs
mm2src/coins/for_tests/: MORTY_HD_tx_history_fixtures.json  RICK_HEADERS.json
mm2src/coins/hd_wallet_storage/: mock_storage.rs  mod.rs  sqlite_storage.rs  wasm_storage.rs
mm2src/coins/lightning/: ln_conf.rs  ln_db.rs  ln_errors.rs  ln_events.rs  ln_filesystem_persister.rs  ln_p2p.rs  ln_platform.rs  ln_rpc.rs  ln_serialization.rs  ln_sql.rs  ln_storage.rs  ln_utils.rs
mm2src/coins/nft/: nft_errors.rs  nft_structs.rs  nft_tests.rs
mm2src/coins/qrc20/: history.rs  qrc20_tests.rs  rpc_clients.rs  script_pubkey.rs  swap.rs
mm2src/coins/rpc_command/: get_current_mtp.rs  get_enabled_coins.rs  get_new_address.rs  hd_account_balance_rpc_error.rs  init_account_balance.rs  init_create_account.rs  init_scan_for_new_addresses.rs  init_withdraw.rs  mod.rs
mm2src/coins/solana/: solana_common_tests.rs  solana_decode_tx_helpers.rs  solana_tests.rs  spl.rs  spl_tests.rs
mm2src/coins/tendermint/: mod.rs  tendermint_balance_events.rs  tendermint_coin.rs  tendermint_native_rpc.rs  tendermint_token.rs  tendermint_tx_history_v2.rs  tendermint_wasm_rpc.rs
mm2src/coins/tezos/: swap_contract.liq  tezos_constants.rs  tezos_rpc.rs  tezos_tests.rs
mm2src/coins/tx_history_storage/: mod.rs  sql_tx_history_storage_v2.rs  tx_history_v2_tests.rs
mm2src/coins/utxo/: bch.rs  bch_and_slp_tx_history.rs  bchd_grpc.rs  qtum.rs  qtum_delegation.rs  rpc_clients.rs  slp.rs  spv.rs  swap_proto_v2_scripts.rs  utxo_balance_events.rs  utxo_block_header_storage.rs  utxo_common.rs  utxo_common_tests.rs  utxo_indexedb_block_header_storage.rs  utxo_sql_block_header_storage.rs  utxo_standard.rs  utxo_tests.rs  utxo_tx_history_v2.rs  utxo_wasm_tests.rs  utxo_withdraw.rs  z_swaps.rs  z_swaps_tests.rs
mm2src/coins/utxo_signer/: Cargo.toml
mm2src/coins/z_coin/: storage.rs  z_coin_errors.rs  z_coin_native_tests.rs  z_coin_tests.rs  z_htlc.rs  z_rpc.rs
mm2src/coins_activation/: Cargo.toml
mm2src/coins_activation/src/: bch_with_tokens_activation.rs  context.rs  erc20_token_activation.rs  eth_with_token_activation.rs  init_utxo.rs  l2.rs  lib.rs  lightning_activation.rs  platform_coin_with_tokens.rs  prelude.rs  slp_token_activation.rs  solana_with_tokens_activation.rs  spl_token_activation.rs  tendermint_token_activation.rs  tendermint_with_assets_activation.rs  token.rs  z_coin_activation.rs
mm2src/common/: Cargo.toml  base58_checksum_encoding.rs  bool_as_int.rs  build.rs  common.rs  crash_reports.rs  crypto.rs  custom_futures.rs  expirable_map.rs  fmt.rs  for_tests.rs  grpc_web.rs  jsonrpc_client.rs  log.rs  mm_ctx.rs  mm_rpc_protocol.rs  number_type_casting.rs  privkey.rs  rpc_task.rs  time_cache.rs  wasm.rs  wio.rs
mm2src/common/custom_futures/: repeatable.rs  timeout.rs
mm2src/common/executor/: abort_on_drop.rs  mod.rs  native_executor.rs  spawner.rs  wasm_executor.rs
mm2src/common/log/: native_log.rs  wasm_log.rs
mm2src/common/mm_error/: mm_error.rs  mm_json_error.rs
mm2src/common/patterns/: state_machine.rs
mm2src/common/shared_ref_counter/: Cargo.toml
mm2src/crypto/: Cargo.toml
mm2src/crypto/src/: bip44.rs  crypto_ctx.rs  global_hd_ctx.rs  hw_client.rs  hw_ctx.rs  hw_error.rs  hw_rpc_task.rs  hw_task.rs  lib.rs  metamask_ctx.rs  metamask_login.rs  privkey.rs  shared_db_id.rs  standard_hd_path.rs  xpub.rs
mm2src/db_common/: Cargo.toml
mm2src/db_common/src/: async_conn_tests.rs  async_sql_conn.rs  lib.rs  sql_constraint.rs  sql_create.rs  sql_delete.rs  sql_insert.rs  sql_query.rs  sql_update.rs  sql_value.rs  sqlite.rs
mm2src/mm2_bin_lib/: Cargo.toml  build.rs
mm2src/mm2_bin_lib/src/: lib.rs  mm2_bin.rs  mm2_native_lib.rs  mm2_wasm_lib.rs
mm2src/mm2_bitcoin/chain/: Cargo.toml
mm2src/mm2_bitcoin/keys/: Cargo.toml
mm2src/mm2_bitcoin/rpc/: Cargo.toml
mm2src/mm2_bitcoin/spv_validation/: Cargo.toml
mm2src/mm2_core/: Cargo.toml
mm2src/mm2_core/src/: event_dispatcher.rs  mm_ctx.rs
mm2src/mm2_err_handle/: Cargo.toml
mm2src/mm2_err_handle/src/: common_errors.rs  discard_mm_trace.rs  lib.rs  mm_error.rs  split_mm.rs
mm2src/mm2_eth/: Cargo.toml
mm2src/mm2_eth/src/: address.rs  eip712.rs  eip712_encode.rs  recovery.rs
mm2src/mm2_event_stream/: Cargo.toml
mm2src/mm2_event_stream/src/: behaviour.rs  controller.rs  lib.rs
mm2src/mm2_git/: Cargo.toml
mm2src/mm2_git/src/: github_client.rs
mm2src/mm2_gui_storage/: Cargo.toml
mm2src/mm2_gui_storage/src/: rpc_commands.rs
mm2src/mm2_libp2p/: Cargo.toml
mm2src/mm2_metamask/: Cargo.toml
mm2src/mm2_metrics/: Cargo.toml
mm2src/mm2_net/: Cargo.toml
mm2src/mm2_number/: Cargo.toml
mm2src/mm2_p2p/: Cargo.toml
mm2src/mm2_rpc/: Cargo.toml
mm2src/trezor/: .gitignore  Cargo.toml  build.rs
(+493 files in other folders)
