[workspace]
members = [
    "mm2src/coins",
    "mm2src/coins/utxo_signer",
    "mm2src/coins_activation",
    "mm2src/common/shared_ref_counter",
    "mm2src/crypto",
    "mm2src/db_common",
    "mm2src/derives/enum_from",
    "mm2src/derives/ser_error",
    "mm2src/derives/ser_error_derive",
    "mm2src/floodsub",
    "mm2src/gossipsub",
    "mm2src/mm2_gui_storage",
    "mm2src/hw_common",
    "mm2src/mm2_bin_lib",
    "mm2src/mm2_bitcoin/crypto",
    "mm2src/mm2_bitcoin/chain",
    "mm2src/mm2_bitcoin/keys",
    "mm2src/mm2_bitcoin/rpc",
    "mm2src/mm2_bitcoin/primitives",
    "mm2src/mm2_bitcoin/script",
    "mm2src/mm2_bitcoin/serialization",
    "mm2src/mm2_bitcoin/serialization_derive",
    "mm2src/mm2_bitcoin/test_helpers",
    "mm2src/mm2_core",
    "mm2src/mm2_db",
    "mm2src/mm2_err_handle",
    "mm2src/mm2_eth",
    "mm2src/mm2_git",
    "mm2src/mm2_io",
    "mm2src/mm2_libp2p",
    "mm2src/mm2_metamask",
    "mm2src/mm2_metrics",
    "mm2src/mm2_main",
    "mm2src/mm2_net",
    "mm2src/mm2_number",
    "mm2src/mm2_rpc",
    "mm2src/rpc_task",
    "mm2src/mm2_test_helpers",
    "mm2src/trezor",
]

# https://doc.rust-lang.org/beta/cargo/reference/features.html#feature-resolver-version-2
resolver = "2"

[profile.release]
debug = 1
debug-assertions = false
# For some reason, opt-level 3 started causing infinite Windows builds after Cosmos integration
# TODO troubleshoot it
opt-level = 2

[profile.test]
# required to avoid a long running process of librustcash additional chain validation that is enabled with debug assertions
debug-assertions = false

[profile.release.overrides."*"]
# Turns debugging symbols off for the out-of-workspace dependencies.
debug = false

[profile.ci]
inherits = "dev"
# full debug info is not required
debug = 1
debug-assertions = false