[package]
name = "adex-cli"
version = "0.1.0"
edition = "2021"
authors = ["Rozhkov Dmitrii <rozhkov@komodoplatform.com>"]
description = "Provides a CLI interface and facilitates interoperating to komodo atomic dex through the mm2 service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "2.33.3"
common = { path = "../common" }
derive_more = "0.99"
env_logger = "0.7.1"
gstuff = { version = "=0.7.4" , features = [ "nightly" ]}
inquire = "0.6"
log = "0.4"
mm2_net = { path = "../mm2_net" }
passwords = "3.1"
serde = "1.0"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
sysinfo = "0.28"
tiny-bip39 = "0.8.0"
tokio = { version = "1.20", features = [ "macros" ] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.3", features = ["processthreadsapi", "winnt"] }
