[package]
name = "coins_activation"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[features]
enable-solana = []
default = []

[dependencies]
async-trait = "0.1"
coins = { path = "../coins" }
common = { path = "../common" }
crypto = { path = "../crypto" }
derive_more = "0.99"
ethereum-types = { version = "0.13", default-features = false, features = ["std", "serialize"] }
futures = { version = "0.3", package = "futures", features = ["compat", "async-await"] }
hex = "0.4.2"
mm2_core = { path = "../mm2_core" }
mm2_err_handle = { path = "../mm2_err_handle" }
mm2_event_stream = { path = "../mm2_event_stream" }
mm2_metrics = { path = "../mm2_metrics" }
mm2_number = { path = "../mm2_number" }
parking_lot = { version = "0.12.0", features = ["nightly"] }
rpc = { path = "../mm2_bitcoin/rpc" }
rpc_task = { path = "../rpc_task" }
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
mm2_metamask = { path = "../mm2_metamask" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lightning = "0.0.113"
lightning-background-processor = "0.0.113"
lightning-invoice = { version = "0.21.0", features = ["serde"] }
