[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip32 = "0.2.2"
common = { path = "../common" }
derive_more = "0.99"
primitives = { path = "../mm2_bitcoin/primitives" }
keys = { path = "../mm2_bitcoin/keys" }
serde = "1.0"
serde_derive = "1.0"
trezor = { path = "../trezor" }
