[package]
name = "crypto"
version = "1.0.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
arrayref = "0.3"
async-trait = "0.1"
bip32 = { version = "0.2.2", default-features = false, features = ["alloc", "secp256k1-ffi"] }
bitcrypto = { path = "../mm2_bitcoin/crypto" }
bs58 = "0.4.0"
common = { path = "../common" }
derive_more = "0.99"
enum-primitive-derive = "0.2"
futures = "0.3"
hex = "0.4.2"
http = "0.2"
hw_common = { path = "../hw_common" }
keys = { path = "../mm2_bitcoin/keys" }
lazy_static = "1.4"
mm2_core = { path = "../mm2_core" }
mm2_err_handle = { path = "../mm2_err_handle" }
num-traits = "0.2"
parking_lot = { version = "0.12.0", features = ["nightly"] }
primitives = { path = "../mm2_bitcoin/primitives" }
rpc = { path = "../mm2_bitcoin/rpc" }
rpc_task = { path = "../rpc_task" }
rustc-hex = "2"
secp256k1 = "0.20"
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-bip39 = "0.8.0"
trezor = { path = "../trezor" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
mm2_metamask = { path = "../mm2_metamask" }
