[package]
name = "db_common"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
common = { path = "../common" }
hex = "0.4.2"
log = "0.4.8"
uuid = { version = "0.7", features = ["serde", "v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.24.2", features = ["bundled"] }
sql-builder = "3.1.1"
