# Support for split-debuginfo [should eventually](https://github.com/rust-lang/rust/issues/34651) land,
# hopefully giving us an out-of-the-box way to separate the code from the debugging information.
# We should use the "objcopy --only-keep-debug" and "add-symbol-file" meanwhile
# and separating stack tracing into raw trace and symbolication parts.

[package]
name = "mm2_bin_lib"
version = "1.0.4-beta"
authors = ["James Lee", "Artem Pikulin", "Artem Grinblat", "Omar S.", "Onur Ozkan", "Alina Sharon", "Caglar Kaya", "Cipi", "Sergey Boiko", "Samuel Onoja", "Roman Sztergbaum", "Kadan Stadelmann <ca333@komodoplatform.com>"]
edition = "2018"
default-run = "mm2"

# wasm-opt reduces the size from 17 Mb to 14. But it runs for few minutes, which is not good for CI.
# For production builds, it's recommended to run wasm-opt separately.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
custom-swap-locktime = ["mm2_main/custom-swap-locktime"] # only for testing purposes, should never be activated on release builds.
native = ["mm2_main/native"] # Deprecated
track-ctx-pointer = ["mm2_main/track-ctx-pointer"]
zhtlc-native-tests = ["mm2_main/zhtlc-native-tests"]

[[bin]]
name = "mm2"
path = "src/mm2_bin.rs"
test = false
doctest = false
bench = false

[lib]
name = "mm2lib"
crate-type = ["cdylib"]
test = false
doctest = false
bench = false

[dependencies]
common = { path = "../common" }
enum-primitive-derive = "0.2"
libc = "0.2"
mm2_core = { path = "../mm2_core" }
mm2_main = { path = "../mm2_main" }
num-traits = "0.2"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gstuff = { version = "0.7", features = ["nightly"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.27" }
mm2_rpc = { path = "../mm2_rpc" }
serde = "1.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = { version = "0.4.1" }

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = "0.5.0"

[build-dependencies]
chrono = "0.4"
gstuff = { version = "0.7", features = ["nightly"] }
regex = "1"
