[package]
name = "mm2_core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
arrayref = "0.3"
async-trait = "0.1"
cfg-if = "1.0"
common = { path = "../common" }
db_common = { path = "../db_common" }
derive_more = "0.99"
futures = { version = "0.3", package = "futures", features = ["compat", "async-await", "thread-pool"] }
hex = "0.4.2"
lazy_static = "1.4"
mm2_event_stream = { path = "../mm2_event_stream" }
mm2_metrics = { path = "../mm2_metrics" }
primitives = { path = "../mm2_bitcoin/primitives" }
rand = { version = "0.7", features = ["std", "small_rng", "wasm-bindgen"] }
serde = "1"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
shared_ref_counter = { path = "../common/shared_ref_counter" }
uuid = { version = "1.2.2", features = ["fast-rng", "serde", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gstuff = { version = "0.7", features = ["nightly"] }
mm2_rpc = { path = "../mm2_rpc", features = [ "rpc_facilities" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-rustls = { version = "0.21.1" }
gstuff = { version = "0.7", features = ["nightly"] }
