[package]
name = "mm2_err_handle"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
futures01 = { version = "0.1", package = "futures" }
serde_json = "1.0"
derive_more = "0.99"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
common = { path = "../common" }
http = "0.2"
