[package]
name = "mm2_event_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
cfg-if = "1.0"
common = { path = "../common" }
futures = { version = "0.3", default-features = false }
parking_lot = "0.12"
serde = { version = "1", features = ["derive", "rc"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "time", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-test = { version = "0.3.2" }
