[package]
name = "mm2_metamask"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-trait = "0.1"
common = { path = "../common" }
derive_more = "0.99"
futures = { version = "0.3", package = "futures" }
itertools = "0.10"
js-sys = { version = "0.3.27" }
jsonrpc-core = "18.0.0" # Same version as `web3` depends on.
lazy_static = "1.4"
mm2_err_handle = { path = "../mm2_err_handle" }
mm2_eth = { path = "../mm2_eth" }
parking_lot = { version = "0.12.0", features = ["nightly"] }
serde = "1.0"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
serde_derive = "1.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = { version = "0.4.1" }
web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.19.0", default-features = false, features = ["eip-1193"] }
