[package]
name = "mm2_net"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.1"
cfg-if = "1.0"
common = { path = "../common" }
derive_more = "0.99"
ethkey = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git" }
futures = { version = "0.3", package = "futures", features = ["compat", "async-await", "thread-pool"] }
http = "0.2"
lazy_static = "1.4"
mm2_core = { path = "../mm2_core" }
mm2_err_handle = { path = "../mm2_err_handle" }
mm2_event_stream = { path = "../mm2_event_stream"}
mm2-libp2p = { path = "../mm2_p2p", package = "mm2_p2p" }
mm2_state_machine = { path = "../mm2_state_machine" }
parking_lot = { version = "0.12.0", features = ["nightly"] }
prost = "0.10"
rand = { version = "0.7", features = ["std", "small_rng", "wasm-bindgen"] }
serde = "1"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gstuff = { version = "0.7", features = ["nightly"] }
wasm-bindgen = "0.2.86"
wasm-bindgen-test = { version = "0.3.2" }
wasm-bindgen-futures = "0.4.21"
web-sys = { version = "0.3.55", features = ["console", "CloseEvent", "DomException", "ErrorEvent", "IdbDatabase", "IdbCursor", "IdbCursorWithValue", "IdbFactory", "IdbIndex", "IdbIndexParameters", "IdbObjectStore", "IdbObjectStoreParameters", "IdbOpenDbRequest", "IdbKeyRange", "IdbTransaction", "IdbTransactionMode", "IdbVersionChangeEvent", "MessageEvent", "WebSocket"] }
js-sys = "0.3.27"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { version = "0.3" }
hyper = { version = "0.14.26", features = ["client", "http2", "server", "tcp", "stream"] }
gstuff = { version = "0.7", features = ["nightly"] }
rustls = { version = "0.20", default-features = false }
tokio = { version = "1.20" }
tokio-rustls = { version = "0.23", default-features = false }

[dev-dependencies]
mocktopus = "0.8.0"
