[package]
name = "mm2_number"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
bigdecimal = { version = "0.3", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde", "std"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
paste = "1.0"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
